Bug 150955 - In Writer the hidden bookmarks appear as if they aren't hidden. MSO shows these hidden status.
Summary: In Writer the hidden bookmarks appear as if they aren't hidden. MSO shows the...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 inReleaseNotes:7.5
Keywords: filter:docx
Depends on:
Blocks: Writer-UX Bookmarks
  Show dependency treegraph
 
Reported: 2022-09-14 12:39 UTC by NISZ LibreOffice Team
Modified: 2022-12-04 22:19 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
File for testing the problem (132.86 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-09-14 12:41 UTC, NISZ LibreOffice Team
Details
Picture about the problem (170.27 KB, image/png)
2022-09-14 12:42 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-09-14 12:39:32 UTC
Description:
When I open the attached file in MSO some of the bookmarks are hidden.
But when I open it Writer, the hidden bookmarks are shown like they aren't.

Steps to Reproduce:
1. Open the attached file
2. Click Insert -> Bookmark... or open the navigator on the sidebar

Actual Results:
Every bookmarks are shown like they aren't hidden even the hidden ones.

Expected Results:
If a bookmark is hidden, then it must also be hidden in Writer.
The bookmark window and Navigator must show it this hidden status.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 7e8ba44fed9a20b5d226b9d3733b79a35acbbe00
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-09-14 12:41:06 UTC
Created attachment 182438 [details]
File for testing the problem
Comment 2 NISZ LibreOffice Team 2022-09-14 12:42:08 UTC
Created attachment 182439 [details]
Picture about the problem
Comment 3 NISZ LibreOffice Team 2022-09-14 13:09:51 UTC
Update note:
When I look at them in the Bookmark window, the "hidden" column does not show their hidden status.
Comment 4 László Németh 2022-09-19 07:58:04 UTC
tdf#150955 sw InsertBookmark: add hidden status to hidden MSO fields

In Insert -> Bookmark... dialog window, add hidden status
to _Toc and _Ref hidden DOCX bookmarks to allow separating them from
user-defined bookmarks using sorting. (In MSO, there is a checkbox
to enable visibility of these hidden bookmarks in Insert bookmark dialog.)

Note: UX field Hidden was only used for a lo:ext OpenDocument feature
(with UNO-only creation of bookmarks with hidden anchor), see tdf#101856.
This UX field was re-used for better handling of DOCX import of
hidden (not user-defined) bookmarks created by MSO.

Follow-up to fix for tdf#150956 in commit 5e71ec6aa0d4f9971f5e2b6f7091d18668c2f0b9
"tdf#150790 tdf#150791 tdf#150947 tdf#150956 sw, a11y: fix visible bookmarks".
Comment 5 Commit Notification 2022-09-19 07:58:20 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cb1f95e7e5781797a0f4485d4a835faff4a8cd8f

tdf#150955 sw InsertBookmark: add hidden status to hidden MSO fields

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2022-09-27 08:33:18 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d3050ff4a1355f7ebd3d4e7ddc8fb64f2b8894dd
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 7 Stéphane Guillou (stragu) 2022-12-04 22:19:44 UTC
Was already a problem in:

Version: 6.2.0.3
Build ID: 98c6a8a1c6c7b144ce3cc729e34964b47ce25d62
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded

"Hidden" column of the bookmarks dialog wasn't there in 6.1.