tdf#150955 sw InsertBookmark: add hidden status to hidden MSO fields

In Insert -> Bookmark... dialog window, add hidden status
to _Toc and _Ref hidden DOCX bookmarks to allow separating them from
user-defined bookmarks using sorting. (In MSO, there is a checkbox
to enable visibility of these hidden bookmarks in Insert bookmark dialog.)

Note: UX field Hidden was only used for a lo:ext OpenDocument feature
(with UNO-only creation of bookmarks with hidden anchor), see tdf#101856.
This UX field was re-used for better handling of DOCX import of
hidden (not user-defined) bookmarks created by MSO.

Follow-up to fix for tdf#150956 in commit 5e71ec6aa0d4f9971f5e2b6f7091d18668c2f0b9
"tdf#150790 tdf#150791 tdf#150947 tdf#150956 sw, a11y: fix visible bookmarks".

Change-Id: I52e9f2c0b65e62c14ac24138235f07fb213da737
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140079
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>